--- a/Project/Pages/AddSubtask.xaml
+++ b/Project/Pages/AddSubtask.xaml
@@ -1,51 +1,57 @@
 ﻿<Page x:Class="Project.Pages.AddSubtask"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:local="clr-namespace:Project.Pages"
       mc:Ignorable="d"
-      Title="AddSubtask" Width="621" Height="309">
+      Width="621" Height="315"
+      Title="Добавление подзадачи">
     <Grid Background="#F5F5F5">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <Border Grid.Row="0" Background="White" Padding="10">
-            <Label Content="{Binding Title}" FontFamily="Verdana" Foreground="#FFA6A6A6"/>
+            <TextBlock Foreground="#FFA6A6A6" FontFamily="Verdana" FontSize="14" Text="Добавление подзадачи"/>
         </Border>
-        <Border Grid.Row="1" Background="White" Margin="10,10,10,10" CornerRadius="10">
+        <Border Grid.Row="1" Background="White" Margin="10,10,10,10" CornerRadius="5" Padding="10">
             <Grid>
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="50"/>
-                    <RowDefinition Height="80"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
                     <RowDefinition Height="Auto"/>
                     <RowDefinition Height="*"/>
                     <RowDefinition Height="Auto"/>
                 </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="150"/>
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
 
-                <Label Grid.Row="0" Grid.Column="0" Content="Наименование" Margin="10" VerticalAlignment="Center" FontFamily="Verdana"/>
-                <TextBox x:Name="name" Grid.Column="1" Margin="10,0,10,0" Height="30" VerticalAlignment="Center" FontFamily="Verdana"/>
+                <TextBlock Grid.Row="0" Grid.Column="0" Text="Наименование*" VerticalAlignment="Center" FontFamily="Verdana" FontSize="12" Margin="0,0,0,10"/>
+                <TextBox x:Name="name" Grid.Row="0" Grid.Column="1" Height="25" Margin="0,0,0,10" FontFamily="Verdana"/>
 
-                <Label Grid.Row="1" Grid.Column="0" Content="Описание" Margin="10,0,10,0" VerticalAlignment="Center" FontFamily="Verdana"/>
-                <TextBox x:Name="description" Grid.Row="1" Grid.Column="1" Margin="10,0,10,0" Height="60" VerticalAlignment="Center" 
-                         AcceptsReturn="True" Text="Опишите подробности" Foreground="#FFA6A6A6" FontFamily="Verdana"/>
+                <TextBlock Grid.Row="1" Grid.Column="0" Text="Описание" VerticalAlignment="Center" FontFamily="Verdana" FontSize="12" Margin="0,0,0,10"/>
+                <TextBox x:Name="description" Grid.Row="1" Grid.Column="1" Height="60" TextWrapping="Wrap" AcceptsReturn="True" Margin="0,0,0,10" FontFamily="Verdana" Foreground="#FFA6A6A6"/>
 
-                <Label Grid.Row="2" Grid.Column="0" Content="Ответственный" Margin="10,5,10,3" FontFamily="Verdana"/>
-                <ComboBox x:Name="Responsible" Grid.Row="2" Grid.Column="1" Margin="10,3,10,0" Height="30" VerticalAlignment="Top" 
-          BorderBrush="White" Background="#FFE5E5E5" FontFamily="Verdana"
-          DisplayMemberPath="FullName"/>
+                <TextBlock Grid.Row="2" Grid.Column="0" Text="Ответственный" VerticalAlignment="Center" FontFamily="Verdana" FontSize="12" Margin="0,0,0,10"/>
+                <ComboBox x:Name="Responsible" Grid.Row="2" Grid.Column="1" Height="25" Margin="0,0,0,10" DisplayMemberPath="FullName" FontFamily="Verdana"/>
 
-                <StackPanel Grid.Row="4" Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Right">
-                    <Button x:Name="bt_Cancel" Click="Bt_Cancel" Content="Отмена" Margin="10" Padding="10,5" 
-                            Background="White" Foreground="#FF000083" BorderBrush="White" Width="120" FontFamily="Verdana"/>
-                    <Button x:Name="bt_Add" Click="Bt_AddS" Content="{Binding ButtonText}" Margin="10" Padding="10,5" 
-                            Background="#FF000083" Foreground="White" BorderBrush="#FF000083" Width="120" Height="40" 
-                            FontFamily="Verdana"/>
+                <StackPanel Grid.Row="4" Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,10,0,0">
+                    <Button x:Name="bt_Cancel" Content="Отмена" Width="100" Height="30" Margin="0,0,10,0" Background="#FFDDDDDD" Foreground="Black" Click="Bt_Cancel" FontFamily="Verdana" BorderBrush="#FFDDDDDD"/>
+                    <Button x:Name="bt_Add" Content="{Binding ButtonText}" Width="100" Height="30" Background="#FF000083" Foreground="White" Click="Bt_AddS" FontFamily="Verdana" BorderBrush="#FF000083">
+                        <Button.Style>
+                            <Style TargetType="Button">
+                                <Setter Property="Visibility" Value="Collapsed"/>
+                                <Style.Triggers>
+                                    <DataTrigger Binding="{Binding CanEdit}" Value="True">
+                                        <Setter Property="Visibility" Value="Visible"/>
+                                    </DataTrigger>
+                                </Style.Triggers>
+                            </Style>
+                        </Button.Style>
+                    </Button>
                 </StackPanel>
             </Grid>
         </Border>
