--- a/Project/Pages/SubtaskEdit.xaml
+++ b/Project/Pages/SubtaskEdit.xaml
@@ -1,182 +1,78 @@
 ﻿<Page x:Class="Project.Pages.SubtaskEdit"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      mc:Ignorable="d" 
-      d:DesignHeight="600" d:DesignWidth="800"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+      mc:Ignorable="d"
+      Width="621" Height="600"
       Title="Редактирование подзадачи">
 
-    <Grid Background="#FFF5F5F5">
-        <ScrollViewer VerticalScrollBarVisibility="Auto">
-            <StackPanel Margin="20">
+    <Grid Background="#F5F5F5">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
 
-                <!-- Заголовок -->
-                <Border Background="#FF000083" CornerRadius="5" Padding="10">
-                    <TextBlock Text="{Binding SubtaskNumber, StringFormat='Редактирование подзадачи №{0}'}"
-                             Foreground="White" 
-                             FontSize="18" 
-                             FontWeight="Bold"/>
-                </Border>
+        <Border Grid.Row="0" Background="White" Padding="10">
+            <TextBlock Foreground="#FFA6A6A6" FontFamily="Verdana" FontSize="14">Редактирование подзадачи</TextBlock>
+        </Border>
 
-                <!-- Основная информация -->
-                <GroupBox Header="Основная информация" Margin="0,15,0,10">
-                    <StackPanel>
-                        <!-- Название -->
-                        <Grid Margin="0,0,0,10">
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="150"/>
-                                <ColumnDefinition Width="*"/>
-                            </Grid.ColumnDefinitions>
-                            <TextBlock Text="Название:" 
-                                     FontWeight="Bold"
-                                     VerticalAlignment="Center"/>
-                            <TextBox x:Name="txtSubtaskName" 
-                                   Text="{Binding SubtaskName, Mode=TwoWay}"
-                                   Grid.Column="1"
-                                   IsReadOnly="{Binding IsReadOnly}"/>
-                        </Grid>
+        <Border Grid.Row="1" Background="White" Margin="10" CornerRadius="5" Padding="10">
+            <ScrollViewer VerticalScrollBarVisibility="Auto">
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="150"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
 
-                        <!-- Описание -->
-                        <Grid Margin="0,0,0,10">
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="150"/>
-                                <ColumnDefinition Width="*"/>
-                            </Grid.ColumnDefinitions>
-                            <TextBlock Text="Описание:" 
-                                     FontWeight="Bold"
-                                     VerticalAlignment="Center"/>
-                            <TextBox x:Name="txtSubtaskDescription" 
-                                   Text="{Binding Description, Mode=TwoWay}"
-                                   Grid.Column="1" 
-                                   Height="100" 
-                                   TextWrapping="Wrap"
-                                   AcceptsReturn="True"
-                                   VerticalScrollBarVisibility="Auto"
-                                   IsReadOnly="{Binding IsReadOnly}"/>
-                        </Grid>
+                    <TextBlock Grid.Row="0" Grid.Column="0" Text="Наименование*" VerticalAlignment="Center" FontFamily="Verdana" FontSize="12" Margin="0,0,0,10"/>
+                    <TextBox x:Name="txtSubtaskName" Grid.Row="0" Grid.Column="1" Height="25" Margin="0,0,0,10" Text="{Binding SubtaskName, Mode=TwoWay}" IsReadOnly="{Binding IsReadOnly}"/>
 
-                        <!-- Срок выполнения -->
-                        <Grid Margin="0,0,0,10">
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="150"/>
-                                <ColumnDefinition Width="*"/>
-                            </Grid.ColumnDefinitions>
-                            <TextBlock Text="Срок выполнения:" 
-                                     FontWeight="Bold"
-                                     VerticalAlignment="Center"/>
-                            <DatePicker x:Name="dpDueDate" 
-                                      SelectedDate="{Binding DueDate, Mode=TwoWay}"
-                                      Grid.Column="1"
-                                      IsEnabled="{Binding CanEdit}"/>
-                        </Grid>
+                    <TextBlock Grid.Row="1" Grid.Column="0" Text="Описание" VerticalAlignment="Center" FontFamily="Verdana" FontSize="12" Margin="0,0,0,10"/>
+                    <TextBox x:Name="txtSubtaskDescription" Grid.Row="1" Grid.Column="1" Height="60" TextWrapping="Wrap" AcceptsReturn="True" Margin="0,0,0,10" Text="{Binding Description, Mode=TwoWay}" IsReadOnly="{Binding IsReadOnly}"/>
+
+                    <TextBlock Grid.Row="2" Grid.Column="0" Text="Срок выполнения" VerticalAlignment="Center" FontFamily="Verdana" FontSize="12" Margin="0,0,0,10"/>
+                    <DatePicker x:Name="dpDueDate" Grid.Row="2" Grid.Column="1" Height="25" Margin="0,0,0,10" SelectedDate="{Binding DueDate, Mode=TwoWay}" IsEnabled="{Binding CanEdit}"/>
+
+                    <TextBlock Grid.Row="3" Grid.Column="0" Text="Ответственный" VerticalAlignment="Center" FontFamily="Verdana" FontSize="12" Margin="0,0,0,10"/>
+                    <StackPanel Grid.Row="3" Grid.Column="1" Orientation="Horizontal" Margin="0,0,0,10">
+                        <ComboBox x:Name="cmbResponsible" Width="200" Margin="0,0,10,0" DisplayMemberPath="Name" IsEnabled="{Binding CanEdit}"/>
+                        <Button x:Name="btAddResponsible" Content="Назначить" Width="100" Height="25" Background="#FF000083" Foreground="White" Click="BtAddResponsible_Click" FontFamily="Verdana" BorderBrush="#FF000083" IsEnabled="{Binding CanEdit}"/>
                     </StackPanel>
-                </GroupBox>
 
-                <!-- Ответственный -->
-                <GroupBox Header="Ответственный" Margin="0,0,0,10">
-                    <StackPanel>
-                        <Grid>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="150"/>
-                                <ColumnDefinition Width="*"/>
-                                <ColumnDefinition Width="Auto"/>
-                            </Grid.ColumnDefinitions>
+                    <ListView x:Name="listViewResponsible" Grid.Row="4" Grid.Column="1" Margin="0,0,0,10">
+                        <ListView.ItemTemplate>
+                            <DataTemplate>
+                                <TextBlock Text="{Binding Name}" FontFamily="Verdana" FontSize="12"/>
+                            </DataTemplate>
+                        </ListView.ItemTemplate>
+                    </ListView>
 
-                            <TextBlock Text="Ответственный:" 
-                                     FontWeight="Bold"
-                                     VerticalAlignment="Center"/>
-
-                            <ComboBox x:Name="cmbResponsible" 
-                                    Grid.Column="1"
-                                    DisplayMemberPath="Name"
-                                    IsEnabled="{Binding CanEdit}" SelectionChanged="cmbResponsible_SelectionChanged"/>
-
-                            <Button x:Name="btAddResponsible" 
-                                  Content="Назначить" 
-                                  Grid.Column="2"
-                                  Margin="10,0,0,0" 
-                                  Padding="5" 
-                                  Click="BtAddResponsible_Click"
-                                  IsEnabled="{Binding CanEdit}" Height="28" VerticalAlignment="Top"/>
-                        </Grid>
-
-                        <!-- Список ответственных -->
-                        <ListView x:Name="listViewResponsible" 
-                                Margin="0,10,0,0" 
-                                Height="100">
-                            <ListView.ItemTemplate>
-                                <DataTemplate>
-                                    <Grid>
-                                        <Grid.ColumnDefinitions>
-                                            <ColumnDefinition Width="*"/>
-                                            <ColumnDefinition Width="Auto"/>
-                                        </Grid.ColumnDefinitions>
-
-                                        <TextBlock Text="{Binding Name}"
-                                                 VerticalAlignment="Center"/>
-
-                                    </Grid>
-                                </DataTemplate>
-                            </ListView.ItemTemplate>
-                        </ListView>
+                    <StackPanel Grid.Row="5" Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,10,0,0">
+                        <Button x:Name="btCancel" Content="Отмена" Width="100" Height="30" Background="#FFDDDDDD" Foreground="Black" Click="BtCancel_Click" FontFamily="Verdana" BorderBrush="#FFDDDDDD"/>
+                        <Button x:Name="btSave" Content="Сохранить" Width="100" Height="30" Margin="0,0,10,0" Background="#FF000083" Foreground="White" Click="BtSave_Click" FontFamily="Verdana" BorderBrush="#FF000083">
+                            <Button.Style>
+                                <Style TargetType="{x:Type Button}">
+                                    <Setter Property="Visibility" Value="Collapsed"/>
+                                    <Style.Triggers>
+                                        <DataTrigger Binding="{Binding CanEdit}" Value="True">
+                                            <Setter Property="Visibility" Value="Visible"/>
+                                        </DataTrigger>
+                                    </Style.Triggers>
+                                </Style>
+                            </Button.Style>
+                        </Button>
                     </StackPanel>
-                </GroupBox>
-
-                <!-- Кнопки действий -->
-                <StackPanel Orientation="Horizontal" 
-                          HorizontalAlignment="Right" 
-                          Margin="0,20,0,0">
-
-                    <!-- Кнопка Отмена -->
-                    <Button x:Name="btCancel" 
-                          Content="Отмена" 
-                          Margin="0,0,10,0" 
-                          Padding="10,5" 
-                          Background="#FFDDDDDD" 
-                          Foreground="Black" 
-                          Click="BtCancel_Click"/>
-
-                    <!-- Кнопка Сохранить -->
-                    <Button x:Name="btSave" 
-                          Content="Сохранить" 
-                          Padding="10,5" 
-                          Background="#FF000083" 
-                          Foreground="White" 
-                          Click="BtSave_Click">
-                        <Button.Style>
-                            <Style TargetType="Button">
-                                <Setter Property="Visibility" Value="Collapsed"/>
-                                <Style.Triggers>
-                                    <DataTrigger Binding="{Binding CanEdit}" Value="True">
-                                        <Setter Property="Visibility" Value="Visible"/>
-                                    </DataTrigger>
-                                </Style.Triggers>
-                            </Style>
-                        </Button.Style>
-                    </Button>
-
-                    <!-- Кнопка Удалить -->
-                    <Button x:Name="btDelete" 
-                          Content="Удалить" 
-                          Margin="10,0,0,0" 
-                          Padding="10,5" 
-                          Background="#FF9B0000" 
-                          Foreground="White" 
-                          Click="DeleteButton_Click">
-                        <Button.Style>
-                            <Style TargetType="Button">
-                                <Setter Property="Visibility" Value="Collapsed"/>
-                                <Style.Triggers>
-                                    <DataTrigger Binding="{Binding CanDelete}" Value="True">
-                                        <Setter Property="Visibility" Value="Visible"/>
-                                    </DataTrigger>
-                                </Style.Triggers>
-                            </Style>
-                        </Button.Style>
-                    </Button>
-                </StackPanel>
-            </StackPanel>
-        </ScrollViewer>
+                </Grid>
+            </ScrollViewer>
+        </Border>
     </Grid>
 </Page>
