--- a/Project/Pages/TaskEdit.xaml
+++ b/Project/Pages/TaskEdit.xaml
@@ -3,100 +3,105 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-      xmlns:local="clr-namespace:Project.Pages"
+      xmlns:local="clr-namespace:Project.Main"
       mc:Ignorable="d"
-      d:DesignHeight="600" d:DesignWidth="800"
+      Width="621" Height="600"
       Title="Редактирование задачи">
 
-    <ScrollViewer VerticalScrollBarVisibility="Auto">
-        <Grid Background="#F5F5F5">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="*"/>
-            </Grid.RowDefinitions>
-            <Border Grid.Row="0" Background="White" Padding="10">
-                <TextBlock Foreground="#FFA6A6A6" FontFamily="Verdana">Редактирование задачи</TextBlock>
-            </Border>
-            <Border Grid.Row="1" Background="White" Margin="10" CornerRadius="5" Padding="10">
+    <Grid Background="#F5F5F5">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+
+        <Border Grid.Row="0" Background="White" Padding="10">
+            <TextBlock Foreground="#FFA6A6A6" FontFamily="Verdana" FontSize="14" Text="Редактирование задачи"/>
+        </Border>
+
+        <Border Grid.Row="1" Background="White" Margin="10" CornerRadius="5" Padding="10">
+            <ScrollViewer VerticalScrollBarVisibility="Auto">
                 <Grid>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto"/>
                         <RowDefinition Height="Auto"/>
                         <RowDefinition Height="Auto"/>
                         <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="*"/>
                         <RowDefinition Height="Auto"/>
-                        <RowDefinition Height="Auto"/>
-                        <RowDefinition Height="Auto"/>
-                        <RowDefinition Height="Auto"/>
-                        <RowDefinition Height="Auto"/>
-                        <!-- Добавлена строка для кнопок -->
                     </Grid.RowDefinitions>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="150"/>
                         <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
 
-                    <TextBlock Grid.Row="0" Grid.Column="0" Text="Наименование*" VerticalAlignment="Center" FontFamily="Verdana" FontSize="12"/>
-                    <TextBox x:Name="txtTaskName" Grid.Row="0" Grid.Column="1" Height="25" Margin="0,0,0,10"/>
+                    <!-- Наименование -->
+                    <TextBlock Grid.Row="0" Grid.Column="0" Text="Наименование*" VerticalAlignment="Center" FontFamily="Verdana" FontSize="12" Margin="0,0,0,10"/>
+                    <TextBox x:Name="txtTaskName" Grid.Row="0" Grid.Column="1" Height="25" Margin="0,0,0,10" Text="{Binding TaskName, Mode=TwoWay}" IsReadOnly="{Binding IsReadOnly}"/>
 
-                    <TextBlock Grid.Row="1" Grid.Column="0" Text="Описание" VerticalAlignment="Center" FontFamily="Verdana" FontSize="12"/>
-                    <TextBox x:Name="txtTaskDescription" Grid.Row="1" Grid.Column="1" Height="60" TextWrapping="Wrap" AcceptsReturn="True" Margin="0,0,0,10"/>
+                    <!-- Описание -->
+                    <TextBlock Grid.Row="1" Grid.Column="0" Text="Описание" VerticalAlignment="Center" FontFamily="Verdana" FontSize="12" Margin="0,0,0,10"/>
+                    <TextBox x:Name="txtTaskDescription" Grid.Row="1" Grid.Column="1" Height="60" TextWrapping="Wrap" AcceptsReturn="True" Margin="0,0,0,10" Text="{Binding TaskDescription, Mode=TwoWay}" IsReadOnly="{Binding IsReadOnly}"/>
 
-                    <TextBlock Grid.Row="2" Grid.Column="0" Text="Дата завершения" VerticalAlignment="Center" FontFamily="Verdana" FontSize="12"/>
-                    <DatePicker x:Name="dpDueDate" Grid.Row="2" Grid.Column="1" Height="25" Margin="0,0,0,10"/>
+                    <!-- Срок выполнения -->
+                    <TextBlock Grid.Row="2" Grid.Column="0" Text="Срок выполнения" VerticalAlignment="Center" FontFamily="Verdana" FontSize="12" Margin="0,0,0,10"/>
+                    <DatePicker x:Name="dpDueDate" Grid.Row="2" Grid.Column="1" Height="25" Margin="0,0,0,10" SelectedDate="{Binding DueDate, Mode=TwoWay}" IsEnabled="{Binding CanEdit}"/>
 
-                    <TextBlock Grid.Row="3" Grid.Column="0" Text="Ответственные" FontFamily="Verdana" Margin="0,10,0,0"/>
-
-                    <StackPanel Grid.Row="4" Grid.Column="1" Orientation="Horizontal" Margin="0,10,0,10">
-                        <ComboBox x:Name="cmbResponsible" Width="200" Margin="0,0,10,0" DisplayMemberPath="Name"/>
-                        <Button x:Name="btAddResponsible" Content="Добавить участника" Width="150" Margin="10,0,0,0" Background="#FF000083" Foreground="White" Click="BtAddResponsible_Click" FontFamily="Verdana" Height="31" BorderBrush="#FF000083"/>
+                    <!-- Ответственные -->
+                    <TextBlock Grid.Row="3" Grid.Column="0" Text="Ответственные" VerticalAlignment="Center" FontFamily="Verdana" FontSize="12" Margin="0,0,0,10"/>
+                    <StackPanel Grid.Row="3" Grid.Column="1" Margin="0,0,0,10">
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="Auto"/>
+                            </Grid.ColumnDefinitions>
+                            <ComboBox x:Name="cmbResponsible" Grid.Column="0" Height="25" DisplayMemberPath="Name" IsEnabled="{Binding CanEdit}"/>
+                            <Button x:Name="BtAddResponsible" Grid.Column="1" Content="Добавить" Width="100" Height="25" Margin="10,0,0,0" Click="BtAddResponsible_Click" Background="#FF000083" Foreground="White" FontFamily="Verdana" BorderBrush="#FF000083" IsEnabled="{Binding CanEdit}"/>
+                        </Grid>
+                        <ListView x:Name="listViewResponsible" Margin="0,10,0,0" Height="100">
+                            <ListView.ItemTemplate>
+                                <DataTemplate>
+                                    <Grid>
+                                        <Grid.ColumnDefinitions>
+                                            <ColumnDefinition Width="*"/>
+                                            <ColumnDefinition Width="Auto"/>
+                                        </Grid.ColumnDefinitions>
+                                        <TextBlock Grid.Column="0" Text="{Binding Name}" VerticalAlignment="Center" FontFamily="Verdana" FontSize="12"/>
+                                        <Button Grid.Column="1" Content="Удалить" Click="RemoveResponsible_Click" Width="70" Height="25" Margin="5,0,0,0" Background="#FF9B0000" Foreground="White" FontFamily="Verdana" BorderBrush="#FF9B0000"/>
+                                    </Grid>
+                                </DataTemplate>
+                            </ListView.ItemTemplate>
+                        </ListView>
                     </StackPanel>
 
-                    <ListView x:Name="listViewResponsible" Grid.Row="5" Grid.Column="1" Margin="0,10,0,10">
+                    <!-- Подзадачи -->
+                    <TextBlock Grid.Row="4" Grid.Column="0" Text="Подзадачи" VerticalAlignment="Center" FontFamily="Verdana" FontSize="12" Margin="0,0,0,10"/>
+                    <ListView x:Name="listViewSubtasks" Grid.Row="4" Grid.Column="1" Margin="0,0,0,10">
                         <ListView.ItemTemplate>
                             <DataTemplate>
-                                <Grid>
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="*"/>
-                                        <ColumnDefinition Width="Auto"/>
-                                    </Grid.ColumnDefinitions>
-                                    <TextBlock Text="{Binding Name}" FontFamily="Verdana" FontSize="12"/>
-                                    <Button Grid.Column="1" Content="✕" Foreground="Red" Background="Transparent"
-                                            BorderThickness="0" FontWeight="Bold" Click="RemoveResponsible_Click" ToolTip="Удалить ответственного"/>
-                                </Grid>
+                                <local:SubtaskCard Width="200"/>
                             </DataTemplate>
                         </ListView.ItemTemplate>
                     </ListView>
 
-                    <TextBlock Grid.Row="6" Grid.Column="0" Text="Подзадачи" FontFamily="Verdana" Margin="0,10,0,0"/>
-
-                    <Button x:Name="btAddSubtask" Grid.Row="6" Grid.Column="1" Content="Добавить подзадачу" Width="150" Margin="0,10,0,10"
-                            HorizontalAlignment="Left" Background="#FF000083" Foreground="White" Click="BtAddSubtask_Click" FontFamily="Verdana" Height="30" BorderBrush="#FF000083"/>
-
-                    <ListView x:Name="listViewSubtasks" Grid.Row="7" Grid.Column="1" Margin="0,10,0,10">
-                        <ListView.ItemTemplate>
-                            <DataTemplate>
-                                <Grid>
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="*"/>
-                                        <ColumnDefinition Width="Auto"/>
-                                    </Grid.ColumnDefinitions>
-                                    <TextBlock Text="{Binding Name}" FontFamily="Verdana" FontSize="12"/>
-                                    <Button Grid.Column="1" Content="✕" Foreground="Red" Background="Transparent"
-                                            BorderThickness="0" FontWeight="Bold" Click="RemoveSubtask_Click" ToolTip="Удалить подзадачу"/>
-                                </Grid>
-                            </DataTemplate>
-                        </ListView.ItemTemplate>
-                    </ListView>
-
-                    <StackPanel Grid.Row="8" Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,10,0,0">
-                        <Button x:Name="btCancel" Content="Отмена" Width="100" Height="30" Margin="0,0,10,0"
-                                Background="#FFDDDDDD" Foreground="Black" Click="BtCancel_Click" FontFamily="Verdana" BorderBrush="#FFDDDDDD"/>
-                        <Button x:Name="btSave" Content="Сохранить" Width="100" Height="30"
-                                Background="#FF000083" Foreground="White" Click="BtSave_Click" FontFamily="Verdana" BorderBrush="#FF000083"/>
+                    <!-- Кнопки действий -->
+                    <StackPanel Grid.Row="5" Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,10,0,0">
+                        <Button x:Name="BtAddSubtask" Content="Добавить подзадачу" Width="150" Height="30" Margin="0,0,10,0" Background="#FF000083" Foreground="White" Click="BtAddSubtask_Click" FontFamily="Verdana" BorderBrush="#FF000083" IsEnabled="{Binding CanEdit}"/>
+                        <Button x:Name="BtCancel" Content="Отмена" Width="100" Height="30" Margin="0,0,10,0" Background="#FFDDDDDD" Foreground="Black" Click="BtCancel_Click" FontFamily="Verdana" BorderBrush="#FFDDDDDD"/>
+                        <Button x:Name="BtSave" Content="Сохранить" Width="100" Height="30" Background="#FF000083" Foreground="White" Click="BtSave_Click" FontFamily="Verdana" BorderBrush="#FF000083">
+                            <Button.Style>
+                                <Style TargetType="Button">
+                                    <Setter Property="Visibility" Value="Collapsed"/>
+                                    <Style.Triggers>
+                                        <DataTrigger Binding="{Binding CanEdit}" Value="True">
+                                            <Setter Property="Visibility" Value="Visible"/>
+                                        </DataTrigger>
+                                    </Style.Triggers>
+                                </Style>
+                            </Button.Style>
+                        </Button>
                     </StackPanel>
                 </Grid>
-            </Border>
-        </Grid>
-    </ScrollViewer>
+            </ScrollViewer>
+        </Border>
+    </Grid>
 </Page>
